--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <img src="./images/logo.svg" height="30px" >
                 </div>
                 <div class="col-md-1 col-sm-2 my-col order-md-6 order-sm-6" >
-                    <a class="one" href="#" target="_blank" style="color: white;">Features</a>
+                    <a class="one" href="#" target="_blank" style="color: white;font-size: 14px;">Features</a>
                 </div>
                 <div class="col-md-1 col-sm-2 my-col">
-                    <a class="one" href="#" target="_blank" style="color: white;">Team</a>
+                    <a class="one" href="#" target="_blank" style="color: white;font-size: 14px;margin-left: 10px;">Team</a>
                 </div>
                 <div class="col-md-1 col-sm-1 my-col">
-                    <a class="one" href="#" target="_blank" style="color: white;">SignIn</a>
+                    <a class="one" href="#" target="_blank" style="color: white;font-size: 14px;">SignIn</a>
                 </div>
             </div>
     <!-- Nav Ends -->                    
