fixed index page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
    
     </head>
    
- <body style="background-color: black;">
+ <body style="background-color: rgba(30, 40, 50, 1);">
     <!-- Nav starts -->
         <div class="container my-container">
-            <div class="row my-row" style="background-color: black;padding-top: 10px;">
+            <div class="row my-row" style="padding-top: 10px;">
                 <div class="col-md-9 col-sm-7 my-col">
                     <img src="./images/logo.svg" height="30px" >
                 </div>
@@ -28,7 +28,12 @@
                     <a class="one" href="#" target="_blank" style="color: white;font-size: 14px;">SignIn</a>
                 </div>
             </div>
-    <!-- Nav Ends -->                    
+    <!-- Nav Ends -->   
+    
+    <!--banner image-->
+    <div class="row-md-8  my-row">
+   <img src="./images/illustration-intro.png" class="abc" style="height: 500px;width: 60%;margin-left: 17%;">
+    </div>
         </div>
     </body>
 </html>
