modify index page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    
     </head>
    
- <body style="background-color: rgba(30, 40, 50, 1);">
+ <body style="background-color: hsl(217, 28%, 15%);">
     <!-- Nav starts -->
-        <div class="container my-container">
+        <div class="container my-container" >
             <div class="row my-row" style="padding-top: 10px;">
                 <div class="col-md-9 col-sm-7 my-col">
                     <img src="./images/logo.svg" height="30px" >
@@ -32,8 +32,129 @@
     
     <!--banner image-->
     <div class="row-md-8  my-row">
-   <img src="./images/illustration-intro.png" class="abc" style="height: 500px;width: 60%;margin-left: 17%;">
+   <img src="./images/illustration-intro.png" class="abc" style="height: 500px;width: 60%;margin-left: 17%;"></div>
+
+   <!--banner info-->
+    <div class="row my-row" >  
+    <header class="container-fluid">
+        <div class="banner-center text-center">
+            <h2>
+                <strong>All your file in one secure location,</strong>
+            </h2>
+            <h2>
+                <strong>accessible anywhere.</strong>
+            </h2>
+            <p class="lead" style="font-size: 15px;">Flyo stores all your most important files in <br/> one secure location . Access them wherever <br/> You need , share and collaborate with friends <br/> family and co-workers   </p>
+            <button type="button" class="btn btn-info" style="width: 30%;margin-left: 35%;">Get Started</button>
+
+    </header>
     </div>
         </div>
+    <!--four icons-->
+    <div class="row  my-row text-center " style="padding-top: 80px;">
+        <div class="col-md-3 offset-2 my-col">
+            <img src="./images/icon-access-anywhere.svg"><br/>
+            <strong style="color: white;padding-left: inherit;">Access your file, anywhere</strong>
+            <p style="color: white;font-size: 12px;">
+                <a> The ability to use a smartphone, tablet or </a> <br/>
+                <a>computer to access your account means your</a> <br/>
+                <a>files follow you everywhere.</a></p>
+        </div>
+        <div class="col-md-3 offset-2 my-col">
+            <img src="./images/icon-security.svg"><br/>
+            <strong style="color: white;">Security you can trust</strong>
+            <p style="color: white;font-size: 12px;">
+            <a> 2-Factors authentication and user controlled </a> <br/>
+            <a>encryption are just a couple of the security </a> <br/>
+            <a>features we allow to help secure your files.</a></p>
+        </div>
+    </div>
+    <div class="row  my-row text-center" style="padding-top: 50px;">
+        <div class="col-md-3 offset-2 my-col ">
+            <img src="./images/icon-collaboration.svg"><br/>
+            <strong style="color: white;">Real-time collaboration</strong>
+            <p style="color: white;font-size: 12px;">
+                <a> Securely share files and folders with friends, </a> <br/>
+                <a>family and colleagues for live collaboration. No</a> <br/>
+                <a>email attachements required.</a></p>
+        </div>
+        <div class="col-md-3 offset-2 my-col">
+            <img src="./images/icon-any-file.svg"><br/>
+            <strong style="color: white;">store any type of file</strong>
+            <p style="color: white;font-size: 12px;">
+                <a> whether you're sharing holidays photos or word</a> <br/>
+                <a>documents, Fylo has you covered allowing for all</a> <br/>
+                <a>file types to be securely stored and shared.</a></p>
+        </div>
+    </div>
+
+    <!--card type-->
+    <div class="row my-row ">
+        <div class="col-md-6 offset-1 my-col" >
+            <img src="./images/illustration-stay-productive.png" style="width:99%;">
+        </div>
+        <div class="col-md-4  my-col" style="padding-top: 100px;">
+            <b  style="color: white;font-size: 30px;" >Stay productive,<br/>Whenever you are</b><br/><br/>
+            <p style="color: white;font-size: 12px;">Never let location be an issue when accessing your file.Fylo has an covered for all of your file storage needs.<br/><br/>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachements required. </p>
+            <a href="#" style="color: cyan;">See how Fylo works <img src="./images/icon-arrow.svg"></a>
+        </div>
+    </div>
+    
+    <!--Feedbacks-->
+    <div class="row my-row" style="padding-top: 80px;">
+        <div class="col-md-1 my-col">
+            <img src="./images/bg-quotes.png" >
+        </div>
+        <div class="col-md-3 col-sm-7  my-col text-center">&nbsp;
+            <div class="card text-white" style="background-color:  hsl(219, 30%, 18%);">
+                  <p class="card-text" style="font-size: 12px;padding-top: 30px;">Fylo has improved our team productively by an <br/> order of magnitude. Since making the switch our <br/>team has become a well-oiled collaboration <br/> machine.</p>
+                  <p class="card-text class1">
+                      <w class="class1" style="padding-left: 20%;">
+                      <img src="./images/profile-1.jpg" style="border-radius: 100px;height: 40px;">
+                      <w class="class2">
+                      <b style="font-size: 12px;">Satish patel <small class="text-muted" ><br/>&nbsp &nbspFounder & CEO, Huddle</small></b>
+                      </w>
+                    </w>
+                 </p>
+              </div>
+        </div>
+
+        <div class="col-md-3 col-sm-7   my-col text-center" >&nbsp;
+            <div class="card text-white" style="background-color:  hsl(219, 30%, 18%);">
+                  <p class="card-text" style="font-size: 12px;padding-top: 30px;">Fylo has improved our team productively by an <br/> order of magnitude. Since making the switch our <br/>team has become a well-oiled collaboration <br/> machine.</p>
+                  <p class="card-text class1">
+                      <w class="class1" style="padding-left: 20%;">
+                      <img src="./images/profile-2.jpg" style="border-radius: 100px;height: 40px;">
+                      <w class="class2">
+                      <b style="font-size: 12px;">Bruce McKenzie <small class="text-muted" ><br/>&nbsp &nbspFounder & CEO, Huddle</small></b>
+                      </w>
+                    </w>
+                 </p>
+              </div>
+        </div>
+
+        <div class="col-md-3 col-sm-7  my-col text-center" >&nbsp;
+            <div class="card text-white" style="background-color:  hsl(219, 30%, 18%);">
+                  <p class="card-text" style="font-size: 12px;padding-top: 30px;">Fylo has improved our team productively by an <br/> order of magnitude. Since making the switch our <br/>team has become a well-oiled collaboration <br/> machine.</p>
+                  <p class="card-text class1">
+                      <w class="class1" style="padding-left: 20%;">
+                      <img src="./images/profile-3.jpg" style="border-radius: 100px;height: 40px;">
+                      <w class="class2">
+                      <b style="font-size: 12px;"> Iva Boyd <small class="text-muted" ><br/>&nbsp &nbspFounder & CEO, Huddle</small></b>
+                      </w>
+                    </w>
+                 </p>
+              </div>
+        </div>
+    </div>
+    <br/>
+    <div class="card text-white text-center" style="max-width: 600px;margin-top: 100px;background-color: hsl(219, 30%, 18%);margin-left: 25%;">
+        <div class="card-body">
+          <h5 class="card-title">Get early access today</h5>
+          <p class="card-text" style="font-size: 12px;">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+        </div>        
+      </div>
+       </div>
+  
     </body>
 </html>
